# easy_io

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: changelog.rst  conf.py  howto.rst  index.rst  overview.rst  quickstart.rst
docs/reference/: backends.rst  handlers.rst  test_utils.rst  utils.rst
easy_io/: __init__.py  easy_io_test.py  file_client.py  interface.py  log.py  test_utils.py
easy_io/backends/: __init__.py  auto_auth.py  base_backend.py  boto3_backend.py  boto3_client.py  http_backend.py  local_backend.py  msc_backend.py  registry_utils.py
easy_io/cli_scripts/: inspect_file.py
easy_io/handlers/: __init__.py  base.py  byte_handler.py  csv_handler.py  gzip_handler.py  imageio_video_handler.py  json_handler.py  jsonl_handler.py  np_handler.py  pandas_handler.py  pickle_handler.py  pil_handler.py  registry_utils.py  tarfile_handler.py  torch_handler.py  torchjit_handler.py  trimesh_handler.py  txt_handler.py  yaml_handler.py
